feat: 看板应用-重构-使用context解决属性钻取问题，实现管理员功能删除功能

--- a/oh-my-kanban/src/App.css
+++ b/oh-my-kanban/src/App.css
@@ -12,6 +12,15 @@
   pointer-events: none;
 }
 
+/* App-header>h1>* {
+  margin-left: 1rem;
+}
+
+.App-header>h1>label {
+  font-size: initial;
+  font-weight: initial;
+} */
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
