--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+html {
+  width: 100%;
+  height: 100%;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,7 +11,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
 
 
-  padding-bottom: 30px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 code {
